tests/ui/traits/negative-bounds/opaque-type-unsatisfied-fn-bound.stderr
error[E0277]: expected a `Fn(u32)` closure, found `()`
  --> $DIR/opaque-type-unsatisfied-fn-bound.rs:5:17
   |
LL | fn produce() -> impl !Fn<(u32,)> {}
   |                 ^^^^^^^^^^^^^^^^ expected an `Fn(u32)` closure, found `()`
   |
   = help: the trait bound `(): !Fn(u32)` is not satisfied

error[E0277]: expected a `Fn(u32)` closure, found `()`
  --> $DIR/opaque-type-unsatisfied-fn-bound.rs:5:34
   |
LL | fn produce() -> impl !Fn<(u32,)> {}
   |                                  ^^ expected an `Fn(u32)` closure, found `()`
   |
   = help: the trait bound `(): !Fn(u32)` is not satisfied

error[E0277]: the size for values of type `impl !Fn<(u32,)>` cannot be known at compilation time
  --> $DIR/opaque-type-unsatisfied-fn-bound.rs:5:17
   |
LL | fn produce() -> impl !Fn<(u32,)> {}
   |                 ^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `impl !Fn<(u32,)>`
   = note: the return type of a function must have a statically known size

error[E0277]: expected a `Fn(u32)` closure, found `()`
  --> $DIR/opaque-type-unsatisfied-fn-bound.rs:5:1
   |
LL | fn produce() -> impl !Fn<(u32,)> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected an `Fn(u32)` closure, found `()`
   |
   = help: the trait bound `(): !Fn(u32)` is not satisfied

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
